for shopping, fixed spacing and size of 'x' buttons for cart items. Made a Vue object in IDW Snake game to handle local storage (saves every time an item is picked up). Added total points display

--- a/standalones/shoppingCart/shop2.css
+++ b/standalones/shoppingCart/shop2.css
@@ -129,10 +129,49 @@ body {
   font-size: 28px;
 }
 
+#cart-viewer{
+  color:lime;
+  font-family: 'Times New Roman', Times, serif;
+  font-size:25px;
+  text-align: center;
+  list-style-type: none;
+  margin: 0;
+}
+
+/* #cart-viewer li{
+  margin: 20px 0;
+  background: black;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  width: 100%;
+} */
+
+.cart-item {
+  margin: 20px 0;
+  background: black;
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  width: 100%;
+}
+.cart-item label{
+ width: 50%;
+}
+.cart-item button{
+  height: 45px;
+  align-self: center;
+ }
+.item-label{
+  background: var(--coastalNight);
+  padding: 0 10px;
+  margin-top: 8px;
+}
+
 #cart-bottom{
   float: left;
   clear: both;
-  border: 4px solid pink;
+  border: 4px solid gold;
   background: var(--metalSea);
   width: 20vw;
   min-width: 210px;
@@ -351,11 +390,14 @@ body {
     #cart-container{
       border: 4px solid gold;
       background:rgba(51, 0, 68, 0.5);
-      float: left;
       min-height: 330px;
       height: 100%;
       width: 70vw;
-      clear: both;
+      margin: 30px 0 -5px 13vw;
+    }
+    #cart-bottom{
+      width: 70vw;
+      padding: 5px 0;
       margin: 30px 0 -5px 13vw;
     }
     
